--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -210,6 +210,14 @@
   &__publisher {
     font-weight: 700;
   }
+
+  // TAVARES SASS
+  ul li {
+    list-style: none;
+  }
+  h1 {
+    text-align: center;
+  }
 }
 
 .mobile-welcome {
@@ -217,7 +225,9 @@
   padding: 3rem;
   display: flex;
   flex-direction: column;
+
   & h1 {
     margin-bottom: 10px;
+    color: #a89a9a;
   }
 }
