--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -4,6 +4,15 @@
   padding: 3rem 0;
   display: flex;
   flex-direction: column;
+
+  // TAVARES SASS
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 100;
+    color: #b6a6a6;
+    text-align: center;
+    margin-bottom: 5px;
+  }
 }
 
 .results {
